--- a/plugin.xml
+++ b/plugin.xml
@@ -18,28 +18,17 @@ xmlns:android="http://schemas.android.com/apk/res/android">
         <clobbers target="cordova.plugins.adobe"/>
     </js-module>
 
-    <!-- <platform name="android">
+    <platform name="android">
+    <preference name="AEP_VERSION" default="1.+"/>
+    <framework src="com.adobe.marketing.mobile:userprofile:$AEP_VERSION"/>
+    <framework src="com.adobe.marketing.mobile:sdk-core:$AEP_VERSION"/>
 
-        <config-file parent="/*" target="res/xml/config.xml">
-            <feature name="SalesforceSnapInsPlugin">
-                <param name="android-package" value="org.apache.cordova.salesforce.SalesforceSnapInsPlugin" />
-                <param name="onload" value="true" />
-            </feature>
-        </config-file>
-
-        <config-file target="AndroidManifest.xml" parent="/manifest">
-            <uses-permission android:name="android.permission.INTERNET" />
-            <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-            <uses-permission android:name="android.permission.CAMERA" />
-        </config-file>
-
-
-
-        <source-file src="src/android/SalesforceSnapInsPlugin.java" target-dir="src/org/apache/cordova/salesforce" />
-        <source-file src="src/android/colors.xml" target-dir="src/res/values" />
-
-        <framework src="src/android/build.gradle" custom="true" type="gradleReference" />
-    </platform> -->
+     <config-file target="AndroidManifest.xml" parent="/manifest">
+      <uses-permission android:name="android.permission.INTERNET" />
+      <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    </config-file>
+    <source-file src="src/android/AEPMobile_PhoneGap.java" target-dir="src/com/aep/" />
+    </platform>
 
     <platform name="ios">
   
