--- a/plugin.xml
+++ b/plugin.xml
@@ -27,7 +27,9 @@ xmlns:android="http://schemas.android.com/apk/res/android">
       <uses-permission android:name="android.permission.INTERNET" />
       <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     </config-file>
-    <source-file src="src/android/AEPMobile_PhoneGap.java" target-dir="src/com/aep/" />
+
+    <source-file src="src/android/AEPMobile_PhoneGap.java" target-dir="src/com/aep" />
+    
     </platform>
 
     <platform name="ios">
