--- a/plugin.xml
+++ b/plugin.xml
@@ -22,7 +22,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 
      <config-file target="res/xml/config.xml" parent="/*">
 			 <feature name="AEPMobile_PhoneGap">
-				 <param name="android-package" value="com.adobe.AEPMobile_PhoneGap" onload="true" />
+				 <param name="android-package" value="com.aep.AEPMobile_PhoneGap" onload="true" />
 				 <param name="onload" value="true" />
 			 </feature>
 		 </config-file>
