--- a/plugin.xml
+++ b/plugin.xml
@@ -53,6 +53,12 @@ xmlns:android="http://schemas.android.com/apk/res/android">
   
         <framework src="ACPUserProfile" type="podspec" spec="~> 2.0"/>
         <framework src="ACPCore" type="podspec" spec="~> 2.0"/>
+        <framework src="ACPAnalytics" type="podspec" spec="~> 2.0"/>
+        <framework src="ACPCampaign" type="podspec" spec="~> 1.0"/>    
+        <framework src="ACPCampaignClassic" type="podspec" spec="~> 2.0"/>    
+        <framework src="ACPTarget" type="podspec" spec="~> 2.0"/>   
+
+
         <config-file parent="/*" target="config.xml">
             <feature name="AEPMobile_PhoneGap">
                 <param name="ios-package" value="AEPMobile_PhoneGap"/>
