--- a/plugin.xml
+++ b/plugin.xml
@@ -33,6 +33,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
     <framework src="com.adobe.marketing.mobile:sdk-core:$AEP_VERSION"/>
     <framework src="com.adobe.marketing.mobile:target:$AEP_VERSION"/>
     <framework src="com.adobe.marketing.mobile:analytics:$AEP_VERSION"/>
+    <framework src="com.adobe.marketing.mobile:places:$AEP_VERSION"/>
 
      <config-file target="AndroidManifest.xml" parent="/manifest">
       <uses-permission android:name="android.permission.INTERNET" />
@@ -56,7 +57,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
        <framework src="ACPAnalytics" type="podspec" spec="~> 2.2"/>
        <framework src="ACPCampaign" type="podspec" spec="~> 1.0"/>       
        <framework src="ACPTarget" type="podspec" spec="~> 2.1"/>  
-
+       <framework src="ACPPlaces" type="podspec" spec="~> 1.3"/>  
 
         <config-file parent="/*" target="config.xml">
             <feature name="AEPMobile_PhoneGap">
